--- a/app/main.sass
+++ b/app/main.sass
@@ -10,7 +10,7 @@
         fill: #000
 
 
-.dongCard
+.Card
   img
     width: 100%
     height: 100%
@@ -28,3 +28,7 @@
     font-weight: 400
     margin: 0
     padding: 0
+
+  .googleLink img
+    width: 35px
+    height: 35px
